--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">BookReview</string>
+    <string name="home">home</string>
+    <string name="search">search</string>
 </resources>
