[ feat ] HomeScreen.kt, build with FakeRepository.kt .
- build repository interface
- retrofit interface

- util
    - Color contrast against method.
    - vertical gradient scrim modifier.

Author : @Kenny50

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,6 @@
     <string name="app_name">BookReview</string>
     <string name="home">home</string>
     <string name="search">search</string>
+    <string name="popular_now">Popular now</string>
+    <string name="recent_review">Recent Review</string>
 </resources>
