[ feat ] HomeScreen, animate scroll to top fab
Author : @Kenny50

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,5 @@
     <string name="search">search</string>
     <string name="popular_now">Popular now</string>
     <string name="recent_review">Recent Review</string>
+    <string name="scroll_to_top">scroll to top</string>
 </resources>
